Adding basics/json-patch/test/json-patch.cpp Adding basics/issue-*.cpp   -> Files ignored by git due to .gitignore setup

--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -1,6 +1,9 @@
 # Test executables.
 #
-issue-*
+issue-25-default-values
+issue-70
+issue-70-root-schema-constructor
+issue-98
 errors
 uri
 string-format-check-test
